--- a/src/pages/base.html
+++ b/src/pages/base.html
@@ -20,11 +20,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="stylesheet" href="/style/index.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700,300i,600i,700i|Raleway:600,800">
+    <link rel="stylesheet" href="/static/index.css" />
+    <link href="https://fonts.googleapis.com/css?family=Kanit|Roboto&display=swap" rel="stylesheet">
   </head>
 
-  <body data-role="{{role}}">
+  <body class="{{role}}">
     {{page}}
     {{script}}
   </body>
