Show last 10 errors in /status

--- a/src/pages/status.html
+++ b/src/pages/status.html
@@ -17,27 +17,27 @@
         <div class="item">
           <div class="row space-between">
             <span>currencies</span>
-            <small class="color-lighten">{{currenciesUptime}}% uptime for the last {{DIMENSION}} hours</small>
+            <small class="color-lighten">{{currenciesUptime}}% uptime for the last {{RESOLUTION}} hours</small>
           </div>
-          <div class="row space-between">
+          <div class="row space-between reverse">
             {{currencies}}
           </div>
         </div>
         <div class="item">
           <div class="row space-between">
             <span>metals</span>
-            <small class="color-lighten">{{metalsUptime}}% uptime for the last {{DIMENSION}} hours</small>
+            <small class="color-lighten">{{metalsUptime}}% uptime for the last {{RESOLUTION}} hours</small>
           </div>
-          <div class="row space-between">
+          <div class="row space-between reverse">
             {{metals}}
           </div>
         </div>
         <div class="item">
           <div class="row space-between">
             <span>cryptos</span>
-            <small class="color-lighten">{{cryptosUptime}}% uptime for the last {{DIMENSION}} hours</small>
+            <small class="color-lighten">{{cryptosUptime}}% uptime for the last {{RESOLUTION}} hours</small>
           </div>
-          <div class="row space-between">
+          <div class="row space-between reverse">
             {{cryptos}}
           </div>
         </div>
@@ -74,6 +74,6 @@
       <a href="/about">About</a>
       <a href="https://twitter.com/tickermaster">@tickermaster</a>
     </nav>
-    <strong>© Soshilabs, Inc.</strong>
+    <strong>© Soshilabs, LTD.</strong>
   </footer>
 </div>
